--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "katarik",
   "version": "1.0.0",
-  "description": "Карточная игра Катарик",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "ws": "^8.14.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
